--- a/Daniel.html
+++ b/Daniel.html
@@ -7,8 +7,7 @@
     <body>
 
         <div>
-            <p>Hola Equipo 2</p>
-            <button><a href="Daniel.html">Página Daniel</a></button>
+            <h1>Hola soy Daniel :)</h1>
         </div>
     </body>
 </html>
