--- a/Index.html
+++ b/Index.html
@@ -7,7 +7,8 @@
     <body>
 
         <div>Hola Equipo 2
-            
+            <p>Cambio por Saúl</p><br>
+            <button><a href="Saul.html">Ir a la página de Saúl</a></button>
         </div>
     </body>
 </html>
