--- a/YazminRB.html
+++ b/YazminRB.html
@@ -1,13 +1,14 @@
 <html>
     <head>
-        <title>Prueba del comando gti merge EQUIPO2</title>
+        <title>EQUIPO2</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
 
         <div>Hola Equipo 2
-            <p><a href="../Equipo2/YazminRB.html">Pagina de Yazmin Reyes Barquera :)</a></p>
+            <p><a href="Index.html">Index</a></p>
+            <p>Mi nombre es Yazmin Reyes Barquera</p>
         </div>
     </body>
 </html>
