--- a/Ana.html
+++ b/Ana.html
@@ -6,11 +6,7 @@
     </head>
     <body>
 
-        <div>Hola Equipo 2
-	<br><br>
-	Hola esta es una modificacion echa por Ana
-	<br>
-	 <button><a href="Ana.html">Link a Pagina de Ana</a></button>
+        <div>Hola esta es pagina de Ana
             
         </div>
     </body>
