--- a/GerardoUriel.html
+++ b/GerardoUriel.html
@@ -5,9 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-
-        <div>Hola Equipo 2
-            <button><a href="GerardoUriel.html">Página de Gerardo Uriel</a></button>
-        </div>
+        <div>Hola soy Gerardo Uriel</div>
+        <button><a href="Index.html">Regresar al Index</a></button>
     </body>
 </html>
