--- a/Angel.html
+++ b/Angel.html
@@ -5,14 +5,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-
-        <div>Hola Equipo 2
-		<br><br>
-		Modificacion echa por Angel
-	<br>
-	<br>
-	 <button><a href="Angel.html">Pagina de Angel</a></button>
-            
+        <div>
+			<h1>Pagina de Angel<h1>
+		
+            <button><a href="Index.html">Index</a></button>
         </div>
     </body>
 </html>
