--- a/Index.html
+++ b/Index.html
@@ -9,5 +9,7 @@
         <div>Hola Equipo 2
             
         </div>
+        <br><p>Modificación realizada por Arián</p><br>
+        <button><a href="Adrian.html">Página de Adrián</a></button>
     </body>
 </html>
