--- a/Index.html
+++ b/Index.html
@@ -6,8 +6,9 @@
     </head>
     <body>
 
-        <div>Hola Equipo 2
-            
+        <div>
+            Hola Equipo 2
         </div>
+        <a href="../HoracioZG.html">Horacio_ZG</a>
     </body>
 </html>
