--- a/Index.html
+++ b/Index.html
@@ -9,6 +9,6 @@
         <div>
             Hola Equipo 2
         </div>
-        <a href="../HoracioZG.html">Horacio_ZG</a>
+        <a href="../Equipo2/HoracioZG.html">Horacio_ZG</a>
     </body>
 </html>
