Poema de Yazmin

--- a/Index.html
+++ b/Index.html
@@ -1,22 +1,24 @@
 <html>
-    <head>
-        <title>Prueba del comando gti merge EQUIPO2</title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    </head>
-    <body>
 
-        <div>Hola Equipo 2
-	<br><br>
-	Hola esta es una modificacion echa por Ana
-	<br>
-	 <button><a href="Ana.html">Link a Pagina de Ana</a></button>
-		<br><br>
-		Modificacion echa por Angel
-	<br>
-	<br>
-	 <button><a href="Angel.html">Pagina de Angel</a></button>
-            
+<head>
+    <title>Prueba del comando gti merge EQUIPO2</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+</head>
+
+<body>
+
+    <div>Hola Equipo 2
+        <br><br>
+        Hola esta es una modificacion echa por Ana
+        <br>
+        <button><a href="Ana.html">Link a Pagina de Ana</a></button>
+        <br><br>
+        Modificacion echa por Angel
+        <br>
+        <br>
+        <button><a href="Angel.html">Pagina de Angel</a></button>
+
         <div>
             <p>Hola Equipo 2</p>
             <button><a href="Daniel.html">Página Daniel</a></button>
@@ -29,7 +31,8 @@
 
             <p><a href="../Equipo2/YazminRB.html">Pagina de Yazmin Reyes Barquera :)</a></p>
         </div>
-        <br><p>Modificación realizada por Arián</p><br>
+        <br>
+        <p>Modificación realizada por Arián</p><br>
         <button><a href="Adrian.html">Página de Adrián</a></button>
         <div>
             Hola Equipo 2
@@ -40,15 +43,37 @@
         <p>Poema Poema Poema Poema Poema</p>
         <br>
         <p>Poema Poema Poema Poema Poema</p>
-        
-	<br><p>Poema de Ana:</p><br>
+
+        <br>
+        <p>Poema de Ana:</p><br>
         <p>Recuerdo esa vez, aunque confuso <br>
-	Que con un código profundo<br>
-	En una pantalla de fondo oscuro<br>
-	Vi lo que sería mi primer “Hola mundo”</p>
+            Que con un código profundo<br>
+            En una pantalla de fondo oscuro<br>
+            Vi lo que sería mi primer “Hola mundo”</p>
 
         <br><br><br>
         <p>Poema de Adrián:</p>
         <p>"Lo admirable es que el hombre siga luchando y creando belleza en medio de un mundo bárbaro y hostil".</p>
-    </body>
+
+        <!------------------------------------------------------------------------------>
+        <br><br><br>
+        <p>Poema agregado por Yazmin Reyes</p>
+        <p>
+            <p>Rima LX (Gustavo Adolfo Bécquer)</p>
+            <p>Mi vida es un erial,</p>
+
+            <p>flor que toco se deshoja;</p>
+
+            <p>que en mi camino fatal</p>
+
+            <p>alguien va sembrando el mal</p>
+
+            <p>para que yo lo recoja.</p>
+        </p>
+        <!------------------------------------------------------------------------------>
+        <br><br><br>
+
+
+</body>
+
 </html>
