--- a/Index.html
+++ b/Index.html
@@ -73,7 +73,16 @@
         <!------------------------------------------------------------------------------>
         <br><br><br>
 
-
+        <p>Poema de Gerardo Uriel:</p><br>
+        <p>
+            <p>Un instante de lucidez, sólo uno;</p>
+            <p>y las redes de lo real vulgar</p>
+            <p>se habrán roto para que podamos ver lo que somos:</p>
+            <p>ilusiones de nuestro propio pensamiento.</p>
+            <p>mil Cioran (1911-1995) Escritor y filósofo.</p>
+        </p>
+        <!------------------------------------------------------------------------------>
+        <br><br><br>
 </body>
 
 </html>
