--- a/Index.html
+++ b/Index.html
@@ -22,6 +22,7 @@
         <div>
             <p>Hola Equipo 2</p>
             <button><a href="Daniel.html">Página Daniel</a></button>
+            <p>Poema Daniel: Feliz cumpleaños Ferxxo</p>
 
             <button><a href="GerardoUriel.html">Página de Gerardo Uriel</a></button>
 
